force-app/main/default/objects/SopLineItem__c/SopLineItem__c.object-meta.xml
<CustomObject>
    <label>SOP Line Item</label>
    <nameField>
        <label>SOP Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOP Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>