force-app/main/default/objects/SopLineItem__c/fields/AdminNotes__c.field-meta.xml
<CustomField>
    <fullName>AdminNotes__c</fullName>
    <label>Admin Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>