force-app/main/default/objects/SopLineItem__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>