force-app/main/default/objects/SopLineItem__c/fields/Machine__c.field-meta.xml
<CustomField>
    <fullName>Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>SOP Line Items</relationshipLabel>
    <relationshipName>SopLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>