force-app/main/default/objects/SopLineItem__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <label>Operations</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operations</valueSetName>
    </valueSet>
</CustomField>