force-app/main/default/objects/SopLineItem__c/fields/OperationsType__c.field-meta.xml
<CustomField>
    <fullName>OperationsType__c</fullName>
    <label>Operations Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperationsType</valueSetName>
    </valueSet>
</CustomField>