force-app/main/default/objects/SopLineItem__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>SOP Line Items</relationshipLabel>
    <relationshipName>SopLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>