force-app/main/default/objects/SopLineItem__c/fields/ProductionNotes__c.field-meta.xml
<CustomField>
    <fullName>ProductionNotes__c</fullName>
    <label>Production Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>