force-app/main/default/objects/SopLineItem__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <label>SOP</label>
    <referenceTo>SOP__c</referenceTo>
    <relationshipLabel>SOP Line Items</relationshipLabel>
    <relationshipName>SOP_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>